@@ -3,11 +3,10 @@ FROM alpine:latest AS build
 WORKDIR /home/gradle/src
 COPY . /home/gradle/src
 
-FROM openjdk:8-jre-slim
-EXPOSE 8080
+FROM openjdk:8-jdk-alpine
+VOLUME /tmp
+EXPOSE 8000
 
-RUN mkdir /app
+COPY --from=build /home/gradle/src/build/libs/*.jar app.jar
 
-COPY --from=build /home/gradle/src/build/libs/*.jar /app/spring-boot-application.jar
-
-ENTRYPOINT ["java", "-XX:+UnlockExperimentalVMOptions", "-XX:+UseCGroupMemoryLimitForHeap", "-Djava.security.egd=file:/dev/./urandom","-jar","/app/spring-boot-application.jar"]
+ENTRYPOINT [ "sh", "-c", "java $JAVA_OPTS -Djava.security.egd=file:/dev/./urandom -jar /app.jar" ]
